# rust-auth-api

./: .gitignore  Cargo.toml  LICENSE-AGPL-3.0  LICENSE-ISC  LICENSE-MIT  Readme.md  package.json  tailwind.config.js
docs/: index.html
src/: lib.rs  main.rs
src/db/: mod.rs
src/pages/: index.html  style.css
src/routes/: docs.rs  login.rs  mod.rs  register.rs
src/utils/: hash.rs  jwt.rs  mod.rs
